--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3495d7e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from faker import Faker\n",
     "import random\n",
-    "import uuid\n",
-    "import pandas as pd"
+    "import uuid"
    ]
   },
   {
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "debbeb37",
    "metadata": {},
    "outputs": [],
@@ -42,7 +41,7 @@
     "        \"zeitbudget\": round(random.uniform(0.5, 1.0), 2)\n",
     "    }\n",
     "    for monat in range(1, 13):\n",
-    "        person[f\"verfuegbarkeit_{monat:02d}/2025\"] = round(random.uniform(0, 1), 2)\n",
+    "        person[f\"verfuegbarkeit_{monat:02d}/2025\"] = round(random.uniform(0.3, 1.0), 2)\n",
     "    personen.append(person)\n"
    ]
   },
