--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3495d7e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from faker import Faker\n",
     "import random\n",
-    "import uuid"
+    "import uuid\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6917f811",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialisierung\n",
     "fake = Faker(\"de_DE\")\n",
-    "kompetenzen_pool = [\"Machine Learning\", \"Data Engineering\", \"Statistik\", \"Softwarearchitektur\", \"NLP\"]\n"
+    "kompetenzen_pool = [\"Machine Learning\", \"Data Engineering\", \"Statistik\", \"Softwarearchitektur\", \"NLP\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "debbeb37",
    "metadata": {},
    "outputs": [],
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2f900eb8",
    "metadata": {},
    "outputs": [],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "c8f22fbd",
    "metadata": {},
    "outputs": [
@@ -106,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d977a6aa",
+   "id": "5eab55a9",
    "metadata": {},
    "outputs": [],
    "source": []
