--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3495d7e3",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "from faker import Faker\n",
     "import random\n",
     "import uuid\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "fake = Faker()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6917f811",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "debbeb37",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2f900eb8",
    "metadata": {},
    "outputs": [],
@@ -57,7 +58,7 @@
     "projekte = []\n",
     "teilaufgaben = []\n",
     "\n",
-    "for _ in range(3):\n",
+    "for _ in range(10):\n",
     "    projekt_id = str(uuid.uuid4())\n",
     "    projekt = {\n",
     "        \"projekt_id\": projekt_id,\n",
@@ -129,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
