--- a/tests/scoreMatching.ipynb
+++ b/tests/scoreMatching.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "70073158",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c6f6988b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Daten laden\n",
+    "personen_df = pd.read_csv(\"../data/personen.csv\")\n",
+    "teilaufgaben_df = pd.read_csv(\"../data/teilaufgaben.csv\")"
    ]
   },
   {
@@ -25,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "51bd6792",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Kompetenzspalte vorbereiten\n",
-    "personen_df[\"kompetenzen_liste\"] = personen_df[\"kompetenzen\"].str.split(\", \")"
+    "personen_df[\"kompetenzen_liste\"] = personen_df[\"kompetenzen\"].str.split(\",\\s*\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
@@ -47,115 +59,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ad1071d7",
+   "execution_count": 18,
+   "id": "f1642530",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Matching-Funktion\n",
-    "matching_ergebnisse = []\n",
-    "\n",
-    "for _, ta in teilaufgaben_df.iterrows():\n",
-    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
-    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
-    "    kandidaten = []\n",
-    "\n",
-    "    for _, person in personen_df.iterrows():\n",
-    "        if ta[\"kompetenz\"] not in person[\"kompetenzen_liste\"]:\n",
-    "            continue\n",
-    "\n",
-    "        # Verfügbarkeit über Zeitfenster aufsummieren\n",
-    "        verfuegbarkeit_summe = 0\n",
-    "        for monat in range(ta_start, ta_ende + 1):\n",
-    "            col = f\"verfuegbarkeit_{monat:02d}/2025\"\n",
-    "            if col in personen_df.columns:\n",
-    "                verfuegbarkeit_summe += person[col]\n",
-    "                \n",
-    "        score = round(verfuegbarkeit_summe * person[\"zeitbudget\"], 2)\n",
-    "\n",
-    "        kandidaten.append({\n",
-    "            \"projekt_id\": ta[\"projekt_id\"],\n",
-    "            \"teilaufgabe_id\": ta[\"teilaufgabe_id\"],\n",
-    "            \"teilaufgabe\": ta[\"bezeichnung\"],\n",
-    "            \"kompetenz\": ta[\"kompetenz\"],\n",
-    "            \"person_id\": person[\"id\"],\n",
-    "            \"name\": person[\"name\"],\n",
-    "            \"score\": score,\n",
-    "            \"verfuegbarkeit_summe\": round(verfuegbarkeit_summe, 2)\n",
-    "        })\n",
-    "\n",
-    "    top_kandidaten = sorted(kandidaten, key=lambda x: x[\"score\"], reverse=True)[:3]\n",
-    "    matching_ergebnisse.extend(top_kandidaten)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "99d78475",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ergebnisliste\n",
+    "# Ergebnisse\n",
     "matching_ergebnisse = []\n",
     "\n",
     "for _, ta in teilaufgaben_df.iterrows():\n",
     "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
     "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
     "    ta_monate = ta_ende - ta_start + 1\n",
-    "    ta_monatsaufwand = ta[\"aufwand\"] / ta_monate  # gleichmäßige Verteilung\n",
+    "    ta_monatsaufwand = ta[\"aufwand\"] / ta_monate\n",
+    "    restaufwand = ta[\"aufwand\"]\n",
     "\n",
     "    kandidaten = []\n",
     "\n",
+    "    # Filtere Personen nach Kompetenz\n",
     "    for _, person in personen_df.iterrows():\n",
     "        if ta[\"kompetenz\"] not in person[\"kompetenzen_liste\"]:\n",
     "            continue\n",
     "\n",
     "        person_id = person[\"id\"]\n",
-    "        ausreichend_frei = True\n",
+    "        verfügbar = True\n",
     "        verfügbarkeit_summe = 0\n",
     "\n",
     "        for monat in range(ta_start, ta_ende + 1):\n",
     "            monat_label = f\"{monat:02d}/2025\"\n",
     "            verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
-    "            verbraucht = belegungen.get(person_id, {}).get(monat_label, 0)\n",
-    "            rest = verfügbarkeit - verbraucht\n",
-    "\n",
-    "            if rest < ta_monatsaufwand:\n",
-    "                ausreichend_frei = False\n",
+    "            belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
+    "            rest = verfügbarkeit - belegt\n",
+    "            if rest <= 0:\n",
+    "                verfügbar = False\n",
     "                break\n",
     "            verfügbarkeit_summe += rest\n",
     "\n",
-    "        if ausreichend_frei:\n",
+    "        if verfügbar and verfügbarkeit_summe > 0:\n",
     "            score = round(verfügbarkeit_summe * person[\"zeitbudget\"], 2)\n",
-    "            kandidaten.append({\n",
-    "                \"projekt_id\": ta[\"projekt_id\"],\n",
-    "                \"teilaufgabe_id\": ta[\"teilaufgabe_id\"],\n",
-    "                \"teilaufgabe\": ta[\"bezeichnung\"],\n",
-    "                \"kompetenz\": ta[\"kompetenz\"],\n",
-    "                \"person_id\": person_id,\n",
-    "                \"name\": person[\"name\"],\n",
-    "                \"score\": score,\n",
-    "                \"verfuegbarkeit_summe\": round(verfügbarkeit_summe, 2)\n",
-    "            })\n",
+    "            kandidaten.append((person, score, verfügbarkeit_summe))\n",
     "\n",
-    "    # Beste Kandidaten wählen\n",
-    "    top_kandidaten = sorted(kandidaten, key=lambda x: x[\"score\"], reverse=True)[:3]\n",
+    "    # Sortiere nach bester nutzbarer Kapazität\n",
+    "    kandidaten = sorted(kandidaten, key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "    # Belegung eintragen\n",
-    "    for kandidat in top_kandidaten:\n",
-    "        pid = kandidat[\"person_id\"]\n",
+    "    for person, score, verf_summe in kandidaten:\n",
+    "        if restaufwand <= 0:\n",
+    "            break\n",
+    "\n",
+    "        pid = person[\"id\"]\n",
     "        if pid not in belegungen:\n",
     "            belegungen[pid] = {}\n",
+    "\n",
+    "        verfügbarkeit_gesamt = 0\n",
+    "        eintrag_monate = {}\n",
     "        for monat in range(ta_start, ta_ende + 1):\n",
     "            monat_label = f\"{monat:02d}/2025\"\n",
-    "            belegungen[pid][monat_label] = belegungen[pid].get(monat_label, 0) + ta_monatsaufwand\n",
+    "            verfügbar = person[f\"verfuegbarkeit_{monat_label}\"]\n",
+    "            belegt = belegungen[pid].get(monat_label, 0)\n",
+    "            rest = max(0, verfügbar - belegt)\n",
+    "            eintrag_monate[monat_label] = rest\n",
+    "            verfügbarkeit_gesamt += rest\n",
     "\n",
-    "    matching_ergebnisse.extend(top_kandidaten)\n"
+    "        if verfügbarkeit_gesamt == 0:\n",
+    "            continue\n",
+    "\n",
+    "        anteil = min(restaufwand, verfügbarkeit_gesamt)\n",
+    "        monatsanteil = anteil / ta_monate\n",
+    "\n",
+    "        # Zuweisung speichern\n",
+    "        matching_ergebnisse.append({\n",
+    "            \"teilaufgabe_id\": ta[\"teilaufgabe_id\"],\n",
+    "            \"teilaufgabe\": ta[\"bezeichnung\"],\n",
+    "            \"projekt_id\": ta[\"projekt_id\"],\n",
+    "            \"kompetenz\": ta[\"kompetenz\"],\n",
+    "            \"person_id\": pid,\n",
+    "            \"name\": person[\"name\"],\n",
+    "            \"zugewiesener_aufwand\": round(anteil, 2)\n",
+    "        })\n",
+    "\n",
+    "        # Tracker aktualisieren\n",
+    "        for monat_label in eintrag_monate:\n",
+    "            verbrauch = min(monatsanteil, eintrag_monate[monat_label])\n",
+    "            belegungen[pid][monat_label] = belegungen[pid].get(monat_label, 0) + verbrauch\n",
+    "\n",
+    "        restaufwand -= anteil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "4bbe675a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Verfügbare Kandidaten für: {ta['bezeichnung']} → {len(kandidaten)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "b755e3a1",
    "metadata": {},
    "outputs": [
@@ -163,14 +173,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matching abgeschlossen – Ergebnisse gespeichert in 'matching_ergebnis.csv'\n"
+      "Matching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\n"
      ]
     }
    ],
    "source": [
     "# Ergebnis speichern\n",
-    "pd.DataFrame(matching_ergebnisse).to_csv(\"matching_ergebnis.csv\", index=False)\n",
-    "print(\"Matching abgeschlossen – Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
+    "df_matching = pd.DataFrame(matching_ergebnisse)\n",
+    "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
+    "print(\"Matching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
   },
   {
@@ -184,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".cenv",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
