--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "3495d7e3",
    "metadata": {},
    "outputs": [],
@@ -15,93 +15,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "6917f811",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialisierung\n",
-    "fake = Faker(\"de_DE\")\n",
-    "kompetenzen_pool = [\"Machine Learning\", \"Data Engineering\", \"Statistik\", \"Softwarearchitektur\", \"NLP\"]"
+    "fake = Faker(\"de_DE\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "id": "9b8053f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kompetenzen Pool\n",
+    "#kompetenzen_pool = [\"Schaltungstechnik\", \"Leistungselektronik\", \"Signalverarbeitung\", \"CAD\", \"FEM\", \"Thermodynamik\", \"Mechanik\", \"Machine Learning\", \"Data Engineering\", \"Statistik\", \"Softwarearchitektur\", \"NLP\", \"Python\", \"Datenbanken\", \"KI\", \"Cloud Computing\", \"Agile Methoden\", \"Projektmanagement\", \"Teamführung\", \"Kommunikation\", \"Präsentationstechniken\", \"Quantenphysik\", \"Optik\", \"Statistische Mechanik\", \"Numerische Mathematik\", \"Mathematische Physik\", \"Astronomie\", \"Geophysik\", \"Materialwissenschaften\", \"Nanotechnologie\", \"Biophysik\", \"Medizinische Physik\", \"Photonik\", \"Akustik\", \"Elektromagnetismus\", \"Lineare Algebra\", \"Analysis\", \"Differentialgleichungen\", \"Stochastik\", \"Numerische Analysis\", \"Optimierung\", \"Graphentheorie\", \"Kombinatorik\", \"Mathematische Logik\", \"Topologie\", \"Funktionalanalysis\", \"Komplexe Analysis\", \"Differentialgeometrie\"]\n",
+    "kompetenzen_pool = {\n",
+    "    \"Maschinenbau\": [\"CAD\", \"FEM\", \"Thermodynamik\", \"Mechanik\"],\n",
+    "    \"Elektrotechnik\": [\"Schaltungstechnik\", \"Leistungselektronik\", \"Signalverarbeitung\"],\n",
+    "    \"Informatik\": [\"Python\", \"Datenbanken\", \"KI\", \"Softwarearchitektur\"],\n",
+    "    \"Physik\": [\"Quantenphysik\", \"Optik\", \"Statistische Mechanik\"],\n",
+    "    \"Mathematik\": [\"Lineare Algebra\", \"Stochastik\", \"Numerik\"]\n",
+    "}\n",
+    "alle_kompetenzen = [k for gruppe in kompetenzen_pool.values() for k in gruppe]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "debbeb37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Personen erzeugen\n",
-    "personen = []\n",
-    "for _ in range(10):\n",
-    "    person = {\n",
-    "        \"id\": str(uuid.uuid4()),\n",
-    "        \"name\": fake.name(),\n",
-    "        \"kompetenzen\": \", \".join(random.sample(kompetenzen_pool, random.randint(1, 3))),\n",
-    "        \"zeitbudget\": round(random.uniform(0.5, 1.0), 2)\n",
-    "    }\n",
-    "    for monat in range(1, 13):\n",
-    "        person[f\"verfuegbarkeit_{monat:02d}/2025\"] = round(random.uniform(0.3, 1.0), 2)\n",
-    "    personen.append(person)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2f900eb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Projekte und Teilaufgaben erzeugen\n",
-    "projekte = []\n",
-    "teilaufgaben = []\n",
-    "\n",
-    "for _ in range(10):\n",
-    "    projekt_id = str(uuid.uuid4())\n",
-    "    projekt = {\n",
-    "        \"projekt_id\": projekt_id,\n",
-    "        \"bezeichnung\": fake.catch_phrase(),\n",
-    "        \"start\": \"01/2025\",\n",
-    "        \"ende\": \"12/2025\"\n",
-    "    }\n",
-    "    proj_ta = [\n",
-    "        {\n",
-    "            \"teilaufgabe_id\": str(uuid.uuid4()),\n",
-    "            \"projekt_id\": projekt_id,\n",
-    "            \"bezeichnung\": fake.bs(),\n",
-    "            \"kompetenz\": random.choice(kompetenzen_pool),\n",
-    "            \"aufwand\": round(random.uniform(1.0, 5.0), 1),\n",
-    "            \"start\": \"03/2025\",\n",
-    "            \"ende\": \"06/2025\"\n",
-    "        }\n",
-    "        for _ in range(random.randint(2, 4))\n",
-    "    ]\n",
-    "    projekte.append(projekt)\n",
-    "    teilaufgaben.extend(proj_ta)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c8f22fbd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV-Dateien wurden erfolgreich erstellt: personen.csv, projekte.csv, teilaufgaben.csv\n"
+      "150 Personen gespeichert als 'personen.csv'\n"
      ]
     }
    ],
    "source": [
-    "# In CSV-Dateien schreiben\n",
-    "pd.DataFrame(personen).to_csv(\"personen.csv\", index=False)\n",
-    "pd.DataFrame(projekte).to_csv(\"projekte.csv\", index=False)\n",
-    "pd.DataFrame(teilaufgaben).to_csv(\"teilaufgaben.csv\", index=False)\n",
+    "# 150 Personen erzeugen\n",
+    "personen = []\n",
+    "for _ in range(150):\n",
+    "    person = {\n",
+    "        \"id\": str(uuid.uuid4()),\n",
+    "        \"name\": fake.name(),\n",
+    "        \"kompetenzen\": random.sample(alle_kompetenzen, random.randint(1, 4)),\n",
+    "        \"zeitbudget\": round(random.uniform(0.4, 1.0), 2)  # 40%–100%-Stellen\n",
+    "    }\n",
+    "    for monat in range(1, 13):\n",
+    "        person[f\"verfuegbarkeit_{monat:02d}/2025\"] = round(random.uniform(0.3, 1.0), 2)\n",
+    "    personen.append(person)\n",
     "\n",
-    "print(\"CSV-Dateien wurden erfolgreich erstellt: personen.csv, projekte.csv, teilaufgaben.csv\")"
+    "df_personen = pd.DataFrame(personen)\n",
+    "df_personen[\"kompetenzen\"] = df_personen[\"kompetenzen\"].apply(lambda x: \", \".join(x))\n",
+    "df_personen.to_csv(\"personen.csv\", index=False)\n",
+    "print(\"150 Personen gespeichert als 'personen.csv'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4ac6da3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Projekt gespeichert als 'teilaufgaben.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "teilaufgaben = [\n",
+    "    {\"bezeichnung\": \"Entwurf CAD-Baugruppe\", \"kompetenz\": \"CAD\", \"aufwand\": 3.0},\n",
+    "    {\"bezeichnung\": \"Simulation FEM-Struktur\", \"kompetenz\": \"FEM\", \"aufwand\": 2.5},\n",
+    "    {\"bezeichnung\": \"Signalverarbeitung Sensor\", \"kompetenz\": \"Signalverarbeitung\", \"aufwand\": 2.0},\n",
+    "    {\"bezeichnung\": \"Entwicklung Python-Modul\", \"kompetenz\": \"Python\", \"aufwand\": 3.5},\n",
+    "    {\"bezeichnung\": \"Statistische Auswertung\", \"kompetenz\": \"Stochastik\", \"aufwand\": 2.0},\n",
+    "    {\"bezeichnung\": \"Optische Analyse\", \"kompetenz\": \"Optik\", \"aufwand\": 1.5},\n",
+    "    {\"bezeichnung\": \"Datenbankmodellierung\", \"kompetenz\": \"Datenbanken\", \"aufwand\": 2.0},\n",
+    "    {\"bezeichnung\": \"Thermodynamische Bewertung\", \"kompetenz\": \"Thermodynamik\", \"aufwand\": 3.0}\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0685d7ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "projekt_id = str(uuid.uuid4())\n",
+    "for ta in teilaufgaben:\n",
+    "    ta[\"teilaufgabe_id\"] = str(uuid.uuid4())\n",
+    "    ta[\"projekt_id\"] = projekt_id\n",
+    "    ta[\"start\"] = \"03/2025\"\n",
+    "    ta[\"ende\"] = \"06/2025\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ccb0955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_teilaufgaben = pd.DataFrame(teilaufgaben)\n",
+    "df_teilaufgaben.to_csv(\"teilaufgaben.csv\", index=False)\n",
+    "print(\"Projekt gespeichert als 'teilaufgaben.csv'\")"
    ]
   },
   {
