Erster versuch Arbeitspaketverteilung

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3495d7e3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "6917f811",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "9b8053f6",
    "metadata": {},
    "outputs": [],
@@ -44,18 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "a52c9602",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Flache Liste aller verfügbaren Kompetenzen\n",
-    "alle_kompetenzen = [k for gruppe in kompetenzen_pool.values() for k in gruppe]"
+    "alle_kompetenzen = [k for gruppe in kompetenzen_pool.values() for k in gruppe]\n",
+    "\n",
+    "# Verfügbare Projekte (für Zuweisung/Simulation)\n",
+    "projekt_ids = [\"PROJ-A\", \"PROJ-B\", \"PROJ-C\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "debbeb37",
    "metadata": {},
    "outputs": [
@@ -89,7 +92,19 @@
     "        }\n",
     "        # Verfügbarkeit für jeden Monat im Jahr 2025 generieren\n",
     "        for monat in range(1, 13):\n",
-    "            person[f\"verfuegbarkeit_{monat:02d}/2025\"] = round(random.uniform(0.3, 1.0), 2)\n",
+    "            monat_label = f\"{monat:02d}/2025\"\n",
+    "            \n",
+    "            # Zuweisung zu einem Projekt oder \"Frei\" (also verfügbar für neues Matching)\n",
+    "            projekt = random.choices(projekt_ids + [\"Frei\"], weights=[0.25, 0.25, 0.25, 0.25])[0]\n",
+    "            \n",
+    "            person[f\"projektbelegung_{monat_label}\"] = projekt\n",
+    "            \n",
+    "            # Verfügbarkeit nur eintragen, wenn \"Frei\" oder später passender Projekt-Match\n",
+    "            if projekt == \"Frei\":\n",
+    "                person[f\"verfuegbarkeit_{monat_label}\"] = round(random.uniform(0.4, 1.0), 2)\n",
+    "            else:\n",
+    "                person[f\"verfuegbarkeit_{monat_label}\"] = 0.0  # Keine Kapazität in gebuchten Monaten\n",
+    "\n",
     "        personen.append(person)\n",
     "\n",
     "    df = pd.DataFrame(personen)\n",
@@ -105,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "b4ac6da3",
    "metadata": {},
    "outputs": [],
@@ -125,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "5eab55a9",
    "metadata": {},
    "outputs": [
