--- a/tests/scoreMatching.ipynb
+++ b/tests/scoreMatching.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "70073158",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime, timedelta\n",
     "import pandas as pd"
    ]
   },
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "dc8ab590",
    "metadata": {},
    "outputs": [],
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "51bd6792",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "24a3188b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "d9c544a5",
    "metadata": {},
    "outputs": [],
@@ -106,9 +107,17 @@
     "\n",
     "    for monat in range(ta_start, ta_ende + 1):\n",
     "        monat_label = f\"{monat:02d}/2025\"\n",
-    "        verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
-    "        belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
-    "        rest = max(0, verfügbarkeit - belegt)\n",
+    "        \n",
+    "        # Skip, wenn andere Projektbelegung vorliegt\n",
+    "        belegung_label = f\"projektbelegung_{monat_label}\"\n",
+    "        aktuelle_belegung = person.get(belegung_label, \"Frei\")\n",
+    "        if aktuelle_belegung not in [\"Frei\", ta[\"projekt_id\"]]:\n",
+    "            rest = 0\n",
+    "        else:\n",
+    "            verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
+    "            belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
+    "            rest = max(0, verfügbarkeit - belegt)\n",
+    "\n",
     "        monatliche_restwerte[monat_label] = rest\n",
     "\n",
     "        if rest <= 0:\n",
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "011efc21",
    "metadata": {},
    "outputs": [
@@ -129,14 +138,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verfügbare Kandidaten für: Entwurf CAD-Baugruppe → 12\n",
-      "Verfügbare Kandidaten für: Simulation FEM-Struktur → 24\n",
-      "Verfügbare Kandidaten für: Signalverarbeitung Sensor → 19\n",
-      "Verfügbare Kandidaten für: Entwicklung Python-Modul → 23\n",
-      "Verfügbare Kandidaten für: Statistische Auswertung → 21\n",
-      "Verfügbare Kandidaten für: Optische Analyse → 26\n",
-      "Verfügbare Kandidaten für: Datenbankmodellierung → 25\n",
-      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 15\n"
+      "Verfügbare Kandidaten für: Entwurf CAD-Baugruppe → 0\n",
+      "Verfügbare Kandidaten für: Simulation FEM-Struktur → 0\n",
+      "Verfügbare Kandidaten für: Signalverarbeitung Sensor → 0\n",
+      "Verfügbare Kandidaten für: Entwicklung Python-Modul → 0\n",
+      "Verfügbare Kandidaten für: Statistische Auswertung → 0\n",
+      "Verfügbare Kandidaten für: Optische Analyse → 0\n",
+      "Verfügbare Kandidaten für: Datenbankmodellierung → 0\n",
+      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 0\n"
      ]
     }
    ],
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "b755e3a1",
    "metadata": {},
    "outputs": [
@@ -230,12 +239,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0726e0b",
+   "metadata": {},
+   "source": [
+    "Neue Liste für Gantt-Daten"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d20a32c5",
+   "execution_count": 20,
+   "id": "f93a65e4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_gantt = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9b3c72c",
+   "metadata": {},
+   "source": [
+    "Vorbereitung Gantt-Diagramm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6b505caa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for eintrag in matching_ergebnisse:\n",
+    "    ta = teilaufgaben_df[teilaufgaben_df[\"teilaufgabe_id\"] == eintrag[\"teilaufgabe_id\"]].iloc[0]\n",
+    "    person = personen_df[personen_df[\"id\"] == eintrag[\"person_id\"]].iloc[0]\n",
+    "\n",
+    "    person_id = person[\"id\"]\n",
+    "    name = person[\"name\"]\n",
+    "    aufgabe = ta[\"bezeichnung\"]\n",
+    "    aufwand_pm = eintrag[\"zugewiesener_aufwand\"]\n",
+    "\n",
+    "    stunden_gesamt = int(aufwand_pm * 160)  # 1 PM = 160h\n",
+    "    reststunden = stunden_gesamt\n",
+    "\n",
+    "    start_monat = int(ta[\"start\"].split(\"/\")[0])\n",
+    "    end_monat = int(ta[\"ende\"].split(\"/\")[0])\n",
+    "\n",
+    "    start_date = datetime(2025, start_monat, 1)\n",
+    "    end_date = datetime(2025, end_monat, 28)\n",
+    "\n",
+    "    aktuelles_datum = start_date\n",
+    "    block_start = None\n",
+    "    block_stunden = 0\n",
+    "\n",
+    "    while aktuelles_datum <= end_date and reststunden > 0:\n",
+    "        monat_label = aktuelles_datum.strftime(\"%m/2025\")\n",
+    "        verfuegbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
+    "        bereits_belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
+    "\n",
+    "        if verfuegbarkeit - bereits_belegt <= 0:\n",
+    "            # kein Spielraum → neuen Block abschließen\n",
+    "            if block_start:\n",
+    "                block_ende = aktuelles_datum\n",
+    "                df_gantt.append({\n",
+    "                    \"Aufgabe\": aufgabe,\n",
+    "                    \"Person\": name,\n",
+    "                    \"Start\": block_start,\n",
+    "                    \"Ende\": block_ende,\n",
+    "                    \"Stunden\": block_stunden\n",
+    "                })\n",
+    "                block_start = None\n",
+    "                block_stunden = 0\n",
+    "            aktuelles_datum += timedelta(days=1)\n",
+    "            continue\n",
+    "\n",
+    "        if block_start is None:\n",
+    "            block_start = aktuelles_datum\n",
+    "\n",
+    "        # plane 1 Arbeitstag (8h)\n",
+    "        df_tag = aktuelles_datum\n",
+    "        belegungen.setdefault(person_id, {})\n",
+    "        belegungen[person_id][monat_label] = belegungen[person_id].get(monat_label, 0) + (8 / 160)\n",
+    "        block_stunden += 8\n",
+    "        reststunden -= 8\n",
+    "        aktuelles_datum += timedelta(days=1)\n",
+    "\n",
+    "    # letztes offenes Zeitfenster speichern\n",
+    "    if block_start and block_stunden > 0:\n",
+    "        df_gantt.append({\n",
+    "            \"Aufgabe\": aufgabe,\n",
+    "            \"Person\": name,\n",
+    "            \"Start\": block_start,\n",
+    "            \"Ende\": aktuelles_datum,\n",
+    "            \"Stunden\": block_stunden\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e056160",
+   "metadata": {},
+   "source": [
+    "Speichere Gantt-Daten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ea82b93e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gantt-Daten gespeichert in 'gantt_daten.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.DataFrame(df_gantt).to_csv(\"gantt_daten.csv\", index=False)\n",
+    "print(\"Gantt-Daten gespeichert in 'gantt_daten.csv'\")"
+   ]
   }
  ],
  "metadata": {
