--- a/tests/scoreMatching_stundenbasiert.ipynb
+++ b/tests/scoreMatching_stundenbasiert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "70073158",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "dc8ab590",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "51bd6792",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
@@ -63,10 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9017ad31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verfügbare Kandidaten für: Entwurf CAD-Baugruppe → 26\n",
+      "Verfügbare Kandidaten für: Simulation FEM-Struktur → 11\n",
+      "Verfügbare Kandidaten für: Signalverarbeitung Sensor → 14\n",
+      "Verfügbare Kandidaten für: Entwicklung Python-Modul → 13\n",
+      "Verfügbare Kandidaten für: Statistische Auswertung → 16\n",
+      "Verfügbare Kandidaten für: Optische Analyse → 22\n",
+      "Verfügbare Kandidaten für: Datenbankmodellierung → 15\n",
+      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 14\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Neue Hauptlogik – stundenbasierte Verplanung ohne projektbasierte Blockierung\n",
@@ -155,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "d9c544a5",
    "metadata": {},
    "outputs": [],
@@ -203,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "011efc21",
    "metadata": {},
    "outputs": [
@@ -293,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "b755e3a1",
    "metadata": {},
    "outputs": [
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "f93a65e4",
    "metadata": {},
    "outputs": [],
@@ -339,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "6b505caa",
    "metadata": {},
    "outputs": [],
@@ -351,7 +366,7 @@
     "    person_id = person[\"id\"]\n",
     "    name = person[\"name\"]\n",
     "    aufgabe = ta[\"bezeichnung\"]\n",
-    "    aufwand_pm = eintrag[\"zugewiesener_aufwand\"]\n",
+    "    aufwand_pm = eintrag.get(\"zugewiesener_aufwand\", 0.0)\n",
     "\n",
     "    stunden_gesamt = int(aufwand_pm * 160)  # 1 PM = 160h\n",
     "    reststunden = stunden_gesamt\n",
@@ -419,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "ea82b93e",
    "metadata": {},
    "outputs": [
