3 neu Datei für Algorithmen in /src/Algorithmen/Algorithmusname.py zur Weiterentwicklung des Codes hinzugefügt

--- a/tests/Zul scoreMatching_mit_backtracking.ipynb
+++ b/tests/Zul scoreMatching_mit_backtracking.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.optimize import linear_sum_assignment\n",
+    "import random\n",
+    "import math\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded: 150 people, 8 tasks\n",
+      "Total workload: 19.5 hours\n"
+     ]
+    }
+   ],
    "source": [
     "# Wandle die Kompetenzen in eine Liste um, um Filterung zu erleichtern\n",
-    "personen_df[\"kompetenzen_liste\"] = personen_df[\"kompetenzen\"].str.split(r\",\\s*\")"
+    "personen_df[\"kompetenzen_liste\"] = personen_df[\"kompetenzen\"].str.split(r\",\\s*\")\n",
+    "\n",
+    "print(f\"Loaded: {len(personen_df)} people, {len(teilaufgaben_df)} tasks\")\n",
+    "print(f\"Total workload: {teilaufgaben_df['aufwand'].sum():.1f} hours\")"
    ]
   },
   {
@@ -52,22 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen):\n",
+    "def berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta_projekt_id):\n",
     "    \"\"\"\n",
-    "    Prüft die Verfügbarkeit einer Person für eine gegebene Zeitspanne.\n",
-    "\n",
-    "    Args:\n",
-    "        person (pd.Series): Personendatensatz.\n",
-    "        ta_start (int): Startmonat (numerisch).\n",
-    "        ta_ende (int): Endmonat (numerisch).\n",
-    "        belegungen (dict): Bisherige Belegungen.\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: (bool verfügbar, float verfügbare Gesamtkapazität, dict verfügbarkeit je Monat)\n",
+    "    Improved availability calculation with project assignment check\n",
     "    \"\"\"\n",
     "    person_id = person[\"id\"]\n",
     "    verfügbar = True\n",
@@ -76,9 +84,18 @@
     "\n",
     "    for monat in range(ta_start, ta_ende + 1):\n",
     "        monat_label = f\"{monat:02d}/2025\"\n",
-    "        verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
-    "        belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
-    "        rest = max(0, verfügbarkeit - belegt)\n",
+    "        \n",
+    "        # Check existing project assignment\n",
+    "        belegung_label = f\"projektbelegung_{monat_label}\"\n",
+    "        aktuelle_belegung = person.get(belegung_label, \"Frei\")\n",
+    "        \n",
+    "        if aktuelle_belegung not in [\"Frei\", ta_projekt_id]:\n",
+    "            rest = 0  # Person already assigned to other project\n",
+    "        else:\n",
+    "            verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
+    "            belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
+    "            rest = max(0, verfügbarkeit - belegt)\n",
+    "\n",
     "        monatliche_restwerte[monat_label] = rest\n",
     "\n",
     "        if rest <= 0:\n",
@@ -86,8 +103,36 @@
     "            break\n",
     "        verfügbarkeit_summe += rest\n",
     "\n",
-    "    return verfügbar, verfügbarkeit_summe, monatliche_restwerte\n"
+    "    return verfügbar, verfügbarkeit_summe, monatliche_restwerte\n",
+    "\n",
+    "def calculate_person_score(person, ta, belegungen=None):\n",
+    "    \"\"\"\n",
+    "    Calculate person score for a task\n",
+    "    \"\"\"\n",
+    "    if belegungen is None:\n",
+    "        belegungen = {}\n",
+    "        \n",
+    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
+    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
+    "    \n",
+    "    verfügbar, verf_summe, _ = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
+    "    \n",
+    "    if verfügbar and verf_summe > 0:\n",
+    "        # Score based on availability, time budget and skill match\n",
+    "        kompetenz_bonus = 1.0\n",
+    "        if ta[\"kompetenz\"] in person[\"kompetenzen_liste\"]:\n",
+    "            kompetenz_bonus = 1.5  # Bonus for exact skill match\n",
+    "            \n",
+    "        score = verf_summe * person[\"zeitbudget\"] * kompetenz_bonus\n",
+    "        return round(score, 2)\n",
+    "    \n",
+    "    return 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
